@@ -1278,7 +1278,7 @@
 //-- WL_SUMMONSTONE
 2229,3000,0,0,0,30000:40000:50000:60000:70000,0
 //-- WL_READING_SB
-2231,5000,0,0,0,5000,300000
+2231,5000,0,0,0,30000,0
 //==========================================
 
 //===== Ranger =============================
